# alfred

./: LICENSE  audio_loop.py  config.py  gemini_session.py  main.py  mic_test.py  pyproject.toml
