[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = ["audio_loop", "config", "main"]

[project]
name = "alfred"
version = "0.1.0"
description = "A personal calendar assistant voice app"
requires-python = ">=3.9"
dependencies = [
    "openwakeword==0.5.1",
    "sounddevice>=0.4.6",
    "pystray==0.19.5",
    "pillow>=10.1.0",
    "numpy>=1.26.0",
    "google-genai>=0.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "black==23.7.0",
]